--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>阿熊 你好！！</title>
+	<title>xuefeng yang</title>
 </head>
 <body>
 	<h1>this is xuefengyang blog </h1>
