--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>xuefeng yang</title>
+	<title>代码人生</title>
 	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<h1>this is xuefengyang blog </h1>
+	<div class="welcome">welcome...</div>
+
 </body>
 </html>
