--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<div class="welcome">welcome...</div>
-
+	<div class="welcome"><a href="./official-website/index.html">welcome...</a></div>
+		
 </body>
 </html>
