--- a/SLYVAN/index.html
+++ b/SLYVAN/index.html
@@ -13,12 +13,12 @@
 		</div>
 		<div class="menu">
 			<div class="menu-wrapper">
-				<a href="show_list.html" class="menu-item">NOTEBOOK</a>
-				<a href="javascript:;" class="menu-item">PENCIL BAG</a>
-				<a href="javascript:;" class="menu-item">COIN BAG</a>
-				<a href="javascript:;" class="menu-item">STORAGE BAG</a>
-				<a href="javascript:;" class="menu-item">CARD HOLDER</a>
-				<a href="javascript:;" class="menu-item">BACK PACK</a>
+				<a href="show_list.html" class="menu-item">NOTEBOOK</a> 
+             <a href="show_list.html" class="menu-item">PENCIL BAG</a> 
+             <a href="show_list.html" class="menu-item">COIN BAG</a> 
+             <a href="show_list.html" class="menu-item">STORAGE BAG</a> 
+             <a href="show_list.html" class="menu-item">CARD HOLDER</a> 
+             <a href="show_list.html" class="menu-item">BACK PACK</a> 
 			</div>
 		</div>
 	</header>
