--- a/SLYVAN/show_list.html
+++ b/SLYVAN/show_list.html
@@ -177,8 +177,38 @@
         </div> 
        </div> 
       </div> 
-  <footer class="foot"> 
-   <span>重庆星小科技有限公司</span> 
-  </footer>  
+ <footer class="foot">
+      <div class="foot-content clear">
+          <div class="foot-item fl" style="width:10%;">
+            <h1>SLYVAN</h1>
+          </div>
+          <div class="foot-item fl" style="width:35%;">
+            
+            <ul>
+              <li>PH      :15695713882</li>
+              <li>SKYPE   :yoyo_xiong2010</li>
+              <li>LINKEDIN:dwyanezhang@163.com</li>
+            </ul>
+          </div>
+          <div class="foot-item fl" style="width:30%;">
+            
+            <ul>
+              <li ><h1>ANDRESS :</h1></li>
+              <li>ROOM 344,</li>
+              <li>NO.2 LIU XIA STREET, </li>
+              <li>THE WEST LAKE DISTRICT, </li>
+              <li>THE WEST LAKE DISTRICT, </li>
+              <li>HANGZHOU CITY, CHINA</li>
+            </ul>
+          </div>
+          <div class="foot-item fl" style="width:25%;">
+              <ul>
+                <li>PH      :15695713882</li>
+                <li>SKYPE   :yoyo_xiong2010</li>
+                <li>LINKEDIN:dwyanezhang@163.com</li>
+              </ul>
+          </div>
+      </div>
+  </footer>
  </body>
 </html>
