--- a/SLYVAN/index.html
+++ b/SLYVAN/index.html
@@ -45,52 +45,39 @@
 				<div class="product-item fl">
 					<div class="product-content">
 						<a href="show_detail.html">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
+						<img src="images/p_one.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
 					</div>
-				</div>
-				<div  class="product-item fl">
+				</div><div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a5.format-assets.com/image/private/s--3oRLmfIy--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/IMG_5260_h0oxbr.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_two.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
 					</div>
-				</div>
-				<div class="product-item fl">
+				</div><div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--qSEzc3KG--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A6782_fw46yx.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_three.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
 					</div>
-				</div>
-				<div class="product-item fl">
+				</div><div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_four.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
 					</div>
-				</div>
-				<div class="product-item fl">
+				</div><div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--qSEzc3KG--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A6782_fw46yx.jpg" alt="">
-						<div class="p-img-cover"></div>
-						<div class="p-description"><span>description</span></div>
-						</a>
-					</div>
-				</div>
-				<div class="product-item fl">
-					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_five.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
@@ -98,8 +85,8 @@
 				</div>
 				<div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--qSEzc3KG--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A6782_fw46yx.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_six.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
@@ -107,80 +94,32 @@
 				</div>
 				<div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_one.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
 					</div>
-				</div>
-				<div class="product-item fl">
+				</div><div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--qSEzc3KG--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A6782_fw46yx.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_two.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
 					</div>
-				</div>
-				<div class="product-item fl">
+				</div><div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_three.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
 					</div>
-				</div>
-				<div class="product-item fl">
+				</div><div class="product-item fl">
 					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--qSEzc3KG--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A6782_fw46yx.jpg" alt="">
-						<div class="p-img-cover"></div>
-						<div class="p-description"><span>description</span></div>
-						</a>
-					</div>
-				</div>
-				<div class="product-item fl">
-					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
-						<div class="p-img-cover"></div>
-						<div class="p-description"><span>description</span></div>
-						</a>
-					</div>
-				</div>
-				<div class="product-item fl">
-					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--qSEzc3KG--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A6782_fw46yx.jpg" alt="">
-						<div class="p-img-cover"></div>
-						<div class="p-description"><span>description</span></div>
-						</a>
-					</div>
-				</div>
-				<div class="product-item fl">
-					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
-						<div class="p-img-cover"></div>
-						<div class="p-description"><span>description</span></div>
-						</a>
-					</div>
-				</div>
-				<div class="product-item fl">
-					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--qSEzc3KG--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A6782_fw46yx.jpg" alt="">
-						<div class="p-img-cover"></div>
-						<div class="p-description"><span>description</span></div>
-						</a>
-					</div>
-				</div>
-				<div class="product-item fl">
-					<div class="product-content">
-						<a href="javascript:;">
-						<img src="http://a2.format-assets.com/image/private/s--PSGi2eSB--/c_limit,g_center,h_65535,w_550/a_auto,fl_keep_iptc.progressive,q_95/_A4A3892_dcfsue.jpg" alt="">
+						<a href="show_detail.html">
+						<img src="images/p_four.png" alt="">
 						<div class="p-img-cover"></div>
 						<div class="p-description"><span>description</span></div>
 						</a>
@@ -189,7 +128,36 @@
 			</div>
 	</div>
 	<footer class="foot">
-		<span>重庆星小科技有限公司</span>
+			<div class="foot-content clear">
+					<div class="foot-item fl" style="width:10%;">
+						<h1>SLYVAN</h1>
+					</div>
+					<div class="foot-item fl" style="width:35%;">
+						
+						<ul>
+							<li>PH      :15695713882</li>
+							<li>SKYPE   :yoyo_xiong2010</li>
+							<li>LINKEDIN:dwyanezhang@163.com</li>
+						</ul>
+					</div>
+					<div class="foot-item fl" style="width:30%;">
+						
+						<ul>
+							<li ><h1>ANDRESS :</h1></li>
+							<li>ROOM 344,</li>
+							<li>NO.2 LIU XIA STREET, </li>
+							<li>THE WEST LAKE DISTRICT, </li>
+							<li>THE WEST LAKE DISTRICT, </li>
+							<li>HANGZHOU CITY, CHINA</li>
+						</ul>
+					</div>
+					<div class="foot-item fl" style="width:25%;">
+							<ul>
+								<li>ICP 888888888</li>
+								<li>技术支持：星小科技</li>
+							</ul>
+					</div>
+			</div>
 	</footer>
 </body>
 </html>
