--- a/SLYVAN/show_detail.html
+++ b/SLYVAN/show_detail.html
@@ -27,9 +27,41 @@
 				 <a class="path-link"href="show_list.html">NOTEBOOK</a><span class="path-span">></span><a class="path-link" href="javascript:;">	MacBookPro</a>
      		 </div>			
 			 <div class="page-detail">
-				商品详情
+			 	<h1>商品详情</h1>
 			 </div>
-
 		</div>
+		<footer class="foot">
+			<div class="foot-content clear">
+					<div class="foot-item fl" style="width:10%;">
+						<h1>SLYVAN</h1>
+					</div>
+					<div class="foot-item fl" style="width:35%;">
+						
+						<ul>
+							<li>PH      :15695713882</li>
+							<li>SKYPE   :yoyo_xiong2010</li>
+							<li>LINKEDIN:dwyanezhang@163.com</li>
+						</ul>
+					</div>
+					<div class="foot-item fl" style="width:30%;">
+						
+						<ul>
+							<li ><h1>ANDRESS :</h1></li>
+							<li>ROOM 344,</li>
+							<li>NO.2 LIU XIA STREET, </li>
+							<li>THE WEST LAKE DISTRICT, </li>
+							<li>THE WEST LAKE DISTRICT, </li>
+							<li>HANGZHOU CITY, CHINA</li>
+						</ul>
+					</div>
+					<div class="foot-item fl" style="width:25%;">
+							<ul>
+								<li>PH      :15695713882</li>
+								<li>SKYPE   :yoyo_xiong2010</li>
+								<li>LINKEDIN:dwyanezhang@163.com</li>
+							</ul>
+					</div>
+			</div>
+	</footer>
 </body>
 </html>
